--- a/index.html
+++ b/index.html
@@ -5,27 +5,252 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@700&display=swap"
+        rel="stylesheet">
 </head>
 <body>
     <header>
-        <a href=""><img src="./pictures/logo.svg" alt="лого">
-        </a>
-        <ul>
-            <li>
-                <a href="">О нас</a>
-            </li>
-            <li>
-                <a href="">Услуги и цены</a>
-            </li>
-            <li>
-                <a href="">Мастера</a>
-            </li>
-            <li>
-                <a href="">Контакты</a>
-            </li>
-        </ul>
+        <nav>
+            <a href=""><img src="./pictures/logo.svg" alt="лого">
+            </a>
+            <ul>
+                <li>
+                    <a href="">О нас</a>
+                </li>
+                <li>
+                    <a href="">Услуги и цены</a>
+                </li>
+                <li>
+                    <a href="">Мастера</a>
+                </li>
+                <li>
+                    <a href="">Контакты</a>
+                </li>
+            </ul>
+        </nav>
         <a href="tel:+380441111111">+38 044 111 11 11</a>
         <button type="button">онлайн-запись</button>
     </header>
+    <main>
+        <section>
+            <ul>
+                <li>
+                    <a href="">Instagram</a>
+                </li>
+                <li>
+                    <a href="">Youtube</a>
+                </li>
+            </ul>
+            <div>
+                <p lang="en">A hair salon for men in Kyiv</p>
+                <h1 lang="en">BarberShop</h1>
+                <p>Мы эксперты в модных мужских стрижках.
+                Работаем быстро, осторожно и со вкусом.
+                </p>
+            </div>
+        </section>
+        <section>
+                <ul>
+                    <li>
+                        <img 
+                        src="./pictures/about-img-1.jpg" 
+                        alt="Барбер бреет голову"
+                        width="270" height="430"
+                        />
+                    </li>
+                    <li>
+                        <img 
+                        src="./pictures/about-img-2.jpg" 
+                        alt="Барбер стрижет кантик"
+                        width="270" height="430"
+                        />
+                        
+                    </li>
+                </ul>
+                <div>
+                    <p>О нас</p>
+                    <h2>
+                        Лучший Барбершоп<br>твоего города
+                    </h2>
+                    <p>
+                        Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.
+                    </p>
+                    <p>
+                        Мы команда, которая никогда не останавливается на достигнутом и жаждет перемен. И когда ты попадешь в руки нашего мастера,
+                        то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы всегда
+                        готовы усовершенствовать каждого, кто к нам приходит!
+                    </p>
+                    <button type="button">онлайн-запись</button>
+                </div>
+        </section>
+        <section>
+            <p>Проведи время в компании лучших мастеров</p>
+            <h2>Услуги и цены</h2>
+            <ul>
+                <li>
+                    <p>Мужская стрижка</p><span>от 300 грн.</span>
+                </li>
+                <li>
+                    <p>Стрижка бороды</p><span>от 200 грн.</span>
+                </li>
+                <li>
+                    <p>Стрижка усов</p><span>от 200 грн.</span>
+                </li>
+                <li>
+                    <p>Бритье опасной бритвой</p><span>от 200 грн.</span>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <p>Cтрижка у стажера</p><span>от 50 грн.</span>
+                </li>
+                <li>
+                    <p>Стрижка под насадку</p><span>от 200 грн.</span>
+                </li>
+                <li>
+                    <p>Детская стрижка (до 12 лет)</p><span>от 300 грн.</span>
+                </li>
+                <li>
+                    <p>Камуфлирование седины</p><span>от 200 грн.</span>
+                </li>
+            </ul>
+            <button type="button">онлайн-запись</button>
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <span>600</span>
+                    <p>Довольных клиентов в день</p>
+                </li>
+                <li>
+                    <span>20</span>
+                    <p>Лучших мастеров Киева</p>
+                </li>
+                <li>
+                    <span>50</span>
+                    <p>Наград за отличный сервис</p>
+                </li>
+                <li>
+                    <span>100</span>
+                    <p>Подарков постоянным клиентам</p>
+                </li>
+                <div>
+                    <p>старая традиционная школа</p>
+                    <h2>Почему приходят именно к нам?</h2>
+                    <p>О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
+                </div>
+            </ul>
+        </section>
+        <section>
+            <p>для настоящих ценителей атмосферы</p>
+            <h2>Наши мастера</h2>
+            <ul>    
+                <li>
+                    <img src="./pictures/john-smith.jpg" alt=барбер стрижет" width="370" height="346">
+                    <h3 lang="en">John Smith</h3>
+                    <p lang="en">Extreme Barber</p>
+                    <ul>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <img src="./pictures/michele-doe.jpg" alt="барбер бреет" width="370" height="346">
+                    <h3 lang="en">Michele Doe</h3>
+                    <p lang="en">Extreme Barber</p>
+                    <ul>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <img src="./pictures/alan-black.jpg" alt="барбер делает кантик" width="370" height="346">
+                    <h3 lang="en">Alan Black</h3>
+                    <p lang="en">Extreme Barber</p>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2 hidden lang="en">gallery</h2>
+            <p>На латинском языке “барба” означает “борода”</p>
+            <ul>
+                <li>
+                    <img src="./pictures/job-1.jpg" alt="стрижка" width="270" height="360">
+                </li>
+                <li>
+                    <img src="./pictures/job-2.jpg" alt="бритье" width="270" height="360">
+                </li>
+                <li>
+                    <img src="./pictures/job-3.jpg" alt="отпаривание" width="270" height="360">
+                </li>
+                <li>
+                    <img src="./pictures/job-4.jpg" alt="кантик" width="270" height="360">
+                </li>
+            </ul>
+        </section>
+        <section>
+                <h2>Онлайн-запись</h2>
+        </section>
+        <section>
+                <h2>Контакты</h2>
+                <address>
+                    <ul>
+                        <li>
+                            <a href="https://goo.gl/maps/wWV4MiiGpyDvuPe18" target="_blank" rel="noopener noreferrer">ул. Васильковая, 7А<br> Киев, 08132</a>
+                        </li>
+                        <li>
+                            <a href="tel:+380441111111">+38 044 111 11 11</a>
+                        </li>
+                        <li>
+                            <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+                        </li>
+                    </ul>
+                    <p>время работы</p>
+                    <P>Ежедневно с 9:00 до 22:00</P>
+                </address>
+        </section>
+        <footer>
+            <p>&copy; Copyright 2020</p>
+            <ul>
+                <a href="">instagram</a>
+                <a href="">youtube</a>
+            </ul>
+        </footer>
+    </main>
 </body>
 </html>
